fix(inline-notification): add spacing between close button and text

--- a/src/components/notification/_inline-notification.scss
+++ b/src/components/notification/_inline-notification.scss
@@ -17,6 +17,7 @@
     @include font-smoothing;
     @include font-size('14');
     display: flex;
+    justify-content: space-between;
     background-color: transparent;
     padding: .75rem 1rem;
     min-height: rem(40px);
